--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CookScan</title>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7BS2162E08"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7BS2162E08');
+    </script>
+
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
