--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="#about">About the app</a></li>
         <li><a href="#ux">Discover the partners</a></li>
-        <li><a href="#front">Contacsts</a></li>
+        <li><a href="#front">Contacts</a></li>
         <li><a href="#motorbikes">Work with us</a></li>
       </ul>
     </div>
